--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -10,6 +10,7 @@ builds:
     main: ./goreleaser
     env:
       - CGO_ENABLED=0
+      - LDFLAGS="-X main.AppVersion=`git tag --sort=-version:refname | head -n 1`"
 
     goos:
       - linux
@@ -43,7 +44,7 @@ changelog:
 
 archives:
   - id: quote
-    name_template: '{{ .ProjectName }}_v{{ .Version }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
+    name_template: "{{ .ProjectName }}_v{{ .Version }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}"
     format: tar.gz
     format_overrides:
       - goos: windows
