--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -3,7 +3,6 @@ project_name: quote
 before:
   hooks:
     - go mod tidy
-    - sh -c "export AppVersion=`git tag --sort=-version:refname | head -n 1`"
 
 builds:
   - binary: quote
@@ -11,6 +10,7 @@ builds:
     main: ./
     env:
       - CGO_ENABLED=0
+      - AppVersion=$(git tag --sort=-version:refname | head -n 1)
 
     ldflags:
       - -s -w -X main.AppVersion={{.Env.AppVersion}}
