--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,7 +1,7 @@
 project_name: quote
 
 env:
-  - AppVersion=`git tag --sort=-version:refname | head -n 1`
+  - AppVersion=$(git tag --sort=-version:refname | head -n 1)
 
 before:
   hooks:
