--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,9 +1,11 @@
 project_name: quote
 
+env:
+    - AppVersion=${AppVersion:-$(git tag --sort=-version:refname | head -n 1)}
+
 before:
   hooks:
     - go mod tidy
-    - sh -C "export AppVersion=`git tag --sort=-version:refname | head -n 1`" && goreleaser --etc
 
 builds:
   - binary: quote
