--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,11 +1,9 @@
 project_name: quote
 
-env:
-    - AppVersion=${AppVersion:-$(git tag --sort=-version:refname | head -n 1)}
-
 before:
   hooks:
     - go mod tidy
+    - ./variables.sh && goreleaser --etc
 
 builds:
   - binary: quote
