--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -12,7 +12,7 @@ builds:
       - CGO_ENABLED=0
 
     ldflags:
-      - -s -w -X main.AppVersion={{.Env.Version}}
+      - -s -w -X main.AppVersion={{.Tag}}
 
     goos:
       - darwin
